--- a/.env.default
+++ b/.env.default
@@ -1,18 +1,10 @@
 # 存储介质，默认是 fs
-STORAGE_LAYER_TYPE=fs
+STORAGE_TYPE=fs
 
-# 存储到本地目录，默认是 .storage
-FS_LAYER_STORAGE=.storage
-
-# 阿里云 OSS
-ALIOSS_LAYER_KEY=
-ALIOSS_LAYER_SECRET=
-ALIOSS_LAYER_BUCKET=
-ALIOSS_LAYER_REGION=
-
-# 七牛
-
-# 腾讯云对象存储
+# 存储属性
+# fs 类型为缓存的目录
+# alioss 类型为 key:secret:bucket:region
+STORAGE_OPTIONS=
 
 # 仅针对源的代理配置
 SOURCE_HTTP_PROXY=
